# learning-about-learning

./: .gitignore  BUGS.md  README.md  best-brain-bug-crossover.json  best-neural-bug-crossover-utrap-longevity.json  best-neural-bug-crossover.json  best-reactive-bug-crossover-utrap-longevity.json  bug-fov120-radius5-front5-side2-0.pt  bug-fov120-radius5-front5-side2-1.pt  bug.pt  bugs.py  log.py  pyproject.toml  simulation.py  stage1_crawl.pt  train.py  trainers.py  training_metrics.jsonl  vizualizer.py  world.py
animals/: brains.md  brains.py  log.py  log_vis.py  train.bac.py  train.md  train.py  tuning.md  visualize.py  world.md  world.py
bugs/: checkpoint.py  species.py  train.py  visualize.py  world.py
step_0/: bugs.py  train.py  vizualizer.py  world.py
step_1/: species.py  train.py  visualize.py  world.py
