[project]
name = "learning-about-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "pygame>=2.6.1",
    "structlog>=25.5.0",
    "torch>=2.12.0",
]
